[package]
name = "rooftop-rainwater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
clap = { version = "4.4.7", features = ["string"] }
toml = "0.8.8"
home = "0.5.5"
